fix z-index issue in dashboard

--- a/apps/frontend/src/app/app.component.scss
+++ b/apps/frontend/src/app/app.component.scss
@@ -9,7 +9,7 @@
         width: 100%;
         background: #ffffffa3;
         backdrop-filter: blur(10px);
-        z-index: 2;
+        z-index: 5;
     }
     
     .main-container {
